--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-		<title>Burger Time!</title>
-		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js/hamburg.js"></script>
-	</head>
-	<body>
-		{{{ body }}}
-	</body>
+	<title>Eat-Da-Burger</title>
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/assets/css/burger_style.css">
+</head>
+
+<body>
+
+{{{body}}}
+
+</body>
+
 </html>
